--- a/Automation/Views/Web.config
+++ b/Automation/Views/Web.config
@@ -21,6 +21,10 @@
       </namespaces>
     </pages>
   </system.web.webPages.razor>
+  
+  <connectionStrings>
+    <add name="AutomationContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=Automation;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 
   <appSettings>
     <add key="webpages:Enabled" value="false" />
