--- a/Automation/Automation.csproj
+++ b/Automation/Automation.csproj
@@ -224,6 +224,12 @@
     <Reference Include="Newtonsoft.Json.Bson, Version=1.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.Bson.1.0.1\lib\net45\Newtonsoft.Json.Bson.dll</HintPath>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.AppContext, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.AppContext.4.3.0\lib\net46\System.AppContext.dll</HintPath>
@@ -470,6 +476,14 @@
     <Compile Include="Migrations\201804241454216_adgpo3.Designer.cs">
       <DependentUpon>201804241454216_adgpo3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804250832032_newSCOM.cs" />
+    <Compile Include="Migrations\201804250832032_newSCOM.Designer.cs">
+      <DependentUpon>201804250832032_newSCOM.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804251408373_dateunnullable.cs" />
+    <Compile Include="Migrations\201804251408373_dateunnullable.Designer.cs">
+      <DependentUpon>201804251408373_dateunnullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AD.cs" />
     <Compile Include="Models\GPO.cs" />
@@ -485,6 +499,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="Content\SCOMstylesheet.css" />
     <Content Include="Content\sort-table.css" />
     <Content Include="favicon.ico" />
@@ -588,6 +603,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804241454216_adgpo3.resx">
       <DependentUpon>201804241454216_adgpo3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804250832032_newSCOM.resx">
+      <DependentUpon>201804250832032_newSCOM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804251408373_dateunnullable.resx">
+      <DependentUpon>201804251408373_dateunnullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
