--- a/Automation/packages.config
+++ b/Automation/packages.config
@@ -3,7 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="4.1.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="jQuery" version="3.0.0" targetFramework="net461" />
+  <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
@@ -83,7 +83,7 @@
   <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net461" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
-  <package id="popper.js" version="1.14.0" targetFramework="net461" />
+  <package id="popper.js" version="1.14.3" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
@@ -104,6 +104,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net461" />
   <package id="System.Management.Automation" version="6.1.7601.17515" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net461" />
@@ -135,4 +136,7 @@
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
+  <package id="X.PagedList" version="7.2.0" targetFramework="net461" />
+  <package id="X.PagedList.Mvc" version="7.2.0" targetFramework="net461" />
+  <package id="X.PagedList.Mvc.Bootstrap4" version="1.0.0" targetFramework="net461" />
 </packages>
