--- a/Automation/Automation.csproj
+++ b/Automation/Automation.csproj
@@ -620,6 +620,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Shared\_SCOMClusters.cshtml" />
+    <Content Include="Views\Shared\_GPO.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
