--- a/Automation/Automation.csproj
+++ b/Automation/Automation.csproj
@@ -506,6 +506,7 @@
     <Compile Include="Models\SCOM.cs" />
     <Compile Include="Models\SCOMAlert.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ADServiceHealthViewModel.cs" />
     <Compile Include="ViewModels\GPOViewModel.cs" />
     <Compile Include="ViewModels\PowerShellViewModel.cs" />
     <Compile Include="ViewModels\SCOMNewViewModel.cs" />
@@ -531,6 +532,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\SSELogo.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -624,6 +626,7 @@
     <Content Include="Views\Shared\_GPO.cshtml" />
     <Content Include="Views\Shared\_AD.cshtml" />
     <Content Include="Views\Shared\_GPChart.cshtml" />
+    <Content Include="Views\Shared\_ADServiceHealth.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
