--- a/Automation/Web.config
+++ b/Automation/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="AutomationContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=AutomationContext-20180417155422; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|AutomationContext-20180417155422.mdf" providerName="System.Data.SqlClient" />
+    <add name="ADConnectionString" connectionString="LDAP://PORWI898/DC=uk,DC=ssegroup,DC=net"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -23,6 +24,16 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <authentication mode="Forms">
+      <forms name=".ADAuthCookie" loginUrl="~/Account/Logon" timeout="45" slidingExpiration="false" protection="All"/>
+    </authentication>
+
+    <membership defaultProvider="ADMembershipProvider">
+      <providers>
+        <clear />
+        <add name="ADMembershipProvider" type="System.Web.Security.ActiveDirectoryMembershipProvider" connectionStringName="ADConnectionString" attributeMapUsername="sAMAccountName"/>
+      </providers>
+    </membership>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
